-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.6.0
-
3
-
15189
when running command 'modprobe lustre', it output following error messages:
modprobe: ERROR: could not insert 'lustre': Input/output error
kernel error messages are:
[ 688.834915] LNetError: 2502:0:(linux-tcpip.c:162:libcfs_ipif_enumerate()) Error -515 enumerating interfaces
[ 688.834919] LNetError: 2502:0:(socklnd.c:2617:ksocknal_enumerate_interfaces()) Can't enumerate interfaces: -515
[ 689.836129] LNetError: 105-4: Error -100 starting up LNI tcp
[ 689.836258] LustreError: 2502:0:(events.c:566:ptlrpc_init_portals()) network initialization failed
So the problem is that it is because we fail to init network, but EIO here is a little confusing for common users.
Since error handling has been there, after returning error code to the caller, rerun 'mod probe lustre', it output messages like:
modprobe: ERROR: could not insert 'lustre': Network is down